--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   internet_connection_checker: ^0.0.1+4
-  dartz: ^0.10.1
   get_storage: ^2.0.3
   get: 4.6.5
   flutter: 
     sdk: flutter
+  either_dart: ^0.1.4
 
 dev_dependencies: 
   flutter_lints: 2.0.1
