--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter: 
     sdk: flutter
   either_dart: ^0.1.4
+  http: ^0.13.4
+  dio: ^4.0.6
 
 dev_dependencies: 
   flutter_lints: 2.0.1
