--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   either_dart: ^0.1.4
   http: ^0.13.4
   dio: ^4.0.6
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies: 
   flutter_lints: 2.0.1
