--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
   flutter_rating_bar: ^4.0.1
+  intl: ^0.17.0
 
 dev_dependencies: 
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
+  mockito: ^5.2.0
 
 flutter: 
   uses-material-design: true
